# openjudge_cli

./: Cargo.toml  README.md  configure_libjpeg.sh
src/: app.rs  code_theme.rs  display.rs  libopenjudge.rs  main.rs
src/libopenjudge/: html.rs  mod.rs  selectors.rs
src/tests/: mod.rs
src/utils/: html.rs  interactions.rs  mod.rs
