[package]
name = "openjudge_cli"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.31", features = ["derive"] }
colored = "3.0.0"
reqwest = { version = "0.12.12", features = ["cookies"] }
scraper = "0.23.1"
tokio = { version = "1.43.0", features = ["full"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.97"
base64 = "0.22.1"
url = "2.5.4"
rpassword = "7.3.1"
nanoid = "0.4.0"
dirs = "6.0.0"
similar = "2.7.0"
syntect = "5.2.0"

[[bin]]
name = "oj"
path = "src/main.rs"
